store the okteto and syncthing logs as artifacts in the CI job (#923)
* reset the kubernetes client to avoid keeping state between tests
* add more logs to the integration tests
* store the okteto and syncthing logs as artifacts
* add an env var to skip deleting folders (for CI)

Signed-off-by: Ramiro Berrelleza <rberrelleza@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,14 +59,16 @@ jobs:
             /usr/local/bin/okteto login --token ${API_TOKEN}
       - run: 
           name: integration tests (serverside)
-          command: |
-            unset OKTETO_CLIENTSIDE_TRANSLATION
-            make integration
+          environment: 
+            OKTETO_CLIENTSIDE_TRANSLATION: ''
+            OKTETO_SKIP_CLEANUP: 'true'
+          command: make integration
       - run: 
           name: integration tests (clientside)
-          command: |
-            export OKTETO_CLIENTSIDE_TRANSLATION=true
-            make integration
+          environment: 
+            OKTETO_SKIP_CLEANUP: 'true'
+            OKTETO_CLIENTSIDE_TRANSLATION: 'true'
+          command: make integration
       - save_cache:
           key: v3-pkg-cache-{{ checksum "go.sum" }}
           paths:
@@ -92,12 +94,12 @@ jobs:
     executor: win/default
     steps: 
       - checkout
-      - restore_cache: 
-          keys:
-            - v4-pkg-cache-windows-{{ checksum "go.sum" }}
       - run: 
           name: upgrade golang
           command: choco upgrade golang
+      - restore_cache: 
+          keys:
+            - v4-pkg-cache-windows-{{ checksum "go.sum" }}
       - run: 
           name: test
           command: |
@@ -118,6 +120,8 @@ jobs:
           name: integration tests (serverside)
           environment: 
             OKTETO_PATH: 'C:\Users\circleci\project\artifacts\bin\okteto.exe'
+            OKTETO_SKIP_CLEANUP: 'true'
+            OKTETO_CLIENTSIDE_TRANSLATION: ''
           command: |
             go test github.com/okteto/okteto/integration -tags=integration --count=1 -v
       - run: 
@@ -125,6 +129,7 @@ jobs:
           environment: 
             OKTETO_PATH: 'C:\Users\circleci\project\artifacts\bin\okteto.exe'
             OKTETO_CLIENTSIDE_TRANSLATION: 'true'
+            OKTETO_SKIP_CLEANUP: 'true'
           command: |
             go test github.com/okteto/okteto/integration -tags=integration --count=1 -v
       - save_cache:
@@ -133,6 +138,8 @@ jobs:
             - C:\Users\circleci\AppData\Local\go-build
             - C:\Users\circleci\go\pkg
             - C:\Go\pkg
+      - store_artifacts:
+          path: C:\Users\circleci\.okteto
   release:
     docker:
       - image: circleci/golang:1.14
