download dependencies before running the test
Signed-off-by: Ramiro Berrelleza <rberrelleza@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,7 @@ jobs:
       - run: 
           name: test
           command: |
+            go mod download
             go version
             go test ./...
       - run: 
