--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,7 +141,7 @@ jobs:
           path: C:\Users\circleci\.okteto
   release:
     docker:
-      - image: okteto/golang-ci:1.15
+      - image: circleci/golang:1.15
     steps:
       - checkout
       - attach_workspace:
@@ -191,7 +191,7 @@ jobs:
             git push https://${GITHUB_TOKEN}@github.com/okteto/homebrew-okteto.git master
   release-master:
     docker:
-      - image: okteto/golang-ci:1.15
+      - image: circleci/golang:1.15
     steps:
       - checkout
       - setup_remote_docker:
