Split "volumes" into "volumes" and "sync" fields
Signed-off-by: Pablo Chico de Guzman <pchico83@gmail.com>

--- a/okteto.yml
+++ b/okteto.yml
@@ -1,8 +1,8 @@
 name: cli
 image: okteto/golang:1
-command: [ "bash" ]
-persistentVolume:
-  enabled: true
+command: bash
 volumes:
   - /go/pkg/
   - /root/.cache/go-build/
+sync:
+  - .:/okteto
