--- a/images/bin/Dockerfile
+++ b/images/bin/Dockerfile
@@ -1,9 +1,10 @@
-FROM --platform=$BUILDPLATFORM syncthing/syncthing:1.8.0 AS syncthing
-FROM --platform=$BUILDPLATFORM okteto/remote:0.3.1 AS remote
-FROM --platform=$BUILDPLATFORM okteto/supervisor:0.1.2 AS supervisor
-FROM --platform=$BUILDPLATFORM okteto/clean:0.1.2 AS clean
+ARG TARGETPLATFORM
+FROM --platform=$TARGETPLATFORM syncthing/syncthing:1.8.0 AS syncthing
+FROM --platform=$TARGETPLATFORM okteto/remote:0.3.1 AS remote
+FROM --platform=$TARGETPLATFORM okteto/supervisor:0.1.2 AS supervisor
+FROM --platform=$TARGETPLATFORM okteto/clean:0.1.2 AS clean
 
-FROM --platform=$BUILDPLATFORM busybox
+FROM --platform=$TARGETPLATFORM busybox
 
 COPY --from=remote /usr/local/bin/remote /usr/local/bin/remote
 COPY --from=supervisor /usr/local/bin/supervisor /usr/local/bin/supervisor
