--- a/.DEREK.yml
+++ b/.DEREK.yml
@@ -8,5 +8,6 @@ features:
  - comments
  - pr_description_required
  - release_notes
+ - hacktoberfest
 
 contributing_url: https://github.com/okteto/okteto/blob/master/contributing.md
