Exclude words from typos
Signed-off-by: Pablo Chico de Guzman <pchico83@gmail.com>

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -6,5 +6,9 @@ excluded_words:
   - Debugf
   - Warnf
   - Errorf
+  - apimachinery
+  - unmarshal
+  - UnmarshalYAML
+  - Unmarshaler
 
 spellcheck_filenames: true
