algo consider branches with the integration postfix
Signed-off-by: Ramiro <rberrelleza@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,6 +230,7 @@ workflows:
               only: 
                 - master
                 - /.*(e2e)/
+                - /.*(integration)/
       - release-master:
           requires:
             - integration
