--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: okteto/golang-ci:1.15
+      - image: okteto/golang-ci:1.16rc1
     steps:
       - checkout
       - restore_cache: 
