Fix registry repository
Signed-off-by: jLopezbarb <javier@okteto.com>

--- a/images/bin/Makefile
+++ b/images/bin/Makefile
@@ -2,4 +2,4 @@ tag = 1.2.21
 
 .PHONY: push
 push:
-	okteto build -t jlopezbarb/bin:${tag} --build-arg OKTETO_BIN_TAG=${tag} .
+	okteto build -t okteto/bin:${tag} --build-arg OKTETO_BIN_TAG=${tag} .
