Adds name of the image to the version
Signed-off-by: jLopezbarb <javier@okteto.com>

--- a/images/bin/Dockerfile
+++ b/images/bin/Dockerfile
@@ -14,4 +14,4 @@ COPY --from=clean /usr/local/bin/clean /usr/local/bin/clean
 COPY start.sh /usr/local/bin/start.sh
 
 ARG OKTETO_BIN_TAG
-RUN echo $OKTETO_BIN_TAG > /usr/local/bin/version.txt
+RUN echo okteto/bin:$OKTETO_BIN_TAG > /usr/local/bin/version.txt
