--- a/images/bin/Makefile
+++ b/images/bin/Makefile
@@ -2,4 +2,4 @@ tag = 1.2.22
 
 .PHONY: push
 push:
-	okteto build -t okteto/bin:${tag} .
+	okteto build -t okteto/bin:${tag} --build-arg OKTETO_BIN_TAG=${tag} .
