--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,7 @@ jobs:
           at: ./artifacts
       - run: *init-gcloud
       - run: 
-          name: upload binaries
+          name: upload release binaries
           command: |
             gsutil -m -a public-read rsync -d -r ./artifacts/bin gs://downloads.okteto.com/cli/${CIRCLE_TAG}
       - setup_remote_docker:
