skip mock release on master
Signed-off-by: Ramiro Berrelleza <rberrelleza@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,6 +237,8 @@ workflows:
           filters:
             tags:
               only: /.*/
+            branches:
+              ignore: master
       - release-master:
           context: GKE
           requires:
