Add a GitHub Action to check for trailing whitespace
Signed-off-by: John Bampton <jbampton@gmail.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,7 @@ jobs:
     name: Check Spelling
     runs-on: ubuntu-latest
     steps:
-      - name: Check Out
+      - name: Check out
         uses: actions/checkout@v2
       - name: Install
         run: |
@@ -15,3 +15,10 @@ jobs:
       - name: Misspell
         run: |
           git ls-files --empty-directory | xargs ./misspell -error
+  trailing-whitespace:
+    name: Trailing Whitespace
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Check for trailing whitespace
+        run: "! git grep -EIn $'[ \t]+$' | grep -v '\\- '"
