run on windows or win
Signed-off-by: Ramiro Berrelleza <rberrelleza@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,4 +257,4 @@ workflows:
             branches:
               only:
                 - master
-                - /.*(windows)/
+                - /.*(windows|win)/
