--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,28 +1,29 @@
+# https://docs.github.com/en/actions
 name: Lint
 
 on: [pull_request]
 
 jobs:
   misspell:
-    name: Check spelling all files in commit misspell
+    name: Check spelling all files in commit misspell  # https://github.com/client9/misspell
     runs-on: ubuntu-latest
     steps:
       - name: Check out
         uses: actions/checkout@v2
       - name: Install
-        run: wget -O - -q https://git.io/misspell | sh -s -- -b .
+        run: wget -O - -q https://git.io/misspell | sh -s -- -b .  # https://www.gnu.org/software/wget/
       - name: misspell
         run: git ls-files --empty-directory | xargs ./misspell -error
   pre-commit:
-    name: Run pre-commit
+    name: Run pre-commit  # https://pre-commit.com/
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v2  # https://www.python.org/
         with:
           python-version: '3.x'  # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64'  # optional x64 or x86. Defaults to x64 if not specified
-      - name: Install dependencies
+      - name: Install dependencies  # https://pip.pypa.io/en/stable/
         run: |
           python -m pip install --upgrade pip
           pip install pre-commit
@@ -35,7 +36,7 @@ jobs:
       - name: Run pre-commit
         run: pre-commit run --all-files
   trailing-whitespace:
-    name: Trailing whitespace
+    name: Trailing whitespace  # https://en.wikipedia.org/wiki/Grep
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
