--- a/.github/workflows/release-bin.yml
+++ b/.github/workflows/release-bin.yml
@@ -28,12 +28,21 @@ jobs:
         username: '${{ secrets.DOCKER_USER }}'
         password: '${{ secrets.DOCKER_PASS }}'
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+      
     - name: Set up Docker Buildx
-      uses: crazy-max/ghaction-docker-buildx@v3
-      with:
-        qemu-version: latest
-        buildx-version: latest
-
+      uses: docker/setup-buildx-action@v1
+      id: buildx   
+    
+    - name: Inspect builder
+      run: |
+          echo "Name:      ${{ steps.buildx.outputs.name }}"
+          echo "Endpoint:  ${{ steps.buildx.outputs.endpoint }}"
+          echo "Status:    ${{ steps.buildx.outputs.status }}"
+          echo "Flags:     ${{ steps.buildx.outputs.flags }}"
+          echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
+    
     - name: Push
       working-directory: images/bin
       run: |
