--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ default_stages: [commit, push]
 default_language_version:
   # force all unspecified Python hooks to run python3
   python: python3
-minimum_pre_commit_version: "1.20.0"
+minimum_pre_commit_version: '1.20.0'
 repos:
   - repo: meta
     hooks:
@@ -48,6 +48,11 @@ repos:
         name: Run codespell
         description: Check Spelling with codespell
         entry: codespell --ignore-words=codespell.txt
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.3.1
+    hooks:
+      - id: prettier
+        exclude: ^\.vscode/tasks\.json$
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.27.1
     hooks:
