--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,7 +181,7 @@ jobs:
       - run:
           name: Auto-update-actions
           command: |
-            gh auth login --with-token $GITHUB_TOKEN
+            echo $GITHUB_TOKEN | gh auth login --with-token
             turbolift init --name update-actions-to-$CIRCLE_TAG
             cd update-actions-to-$CIRCLE_TAG
             repos=("deploy-preview" "delete-namespace" "build" "destroy-preview" "deploy-stack" "namespace" "pipeline" "push" "destroy-pipeline" "create-namespace" "login" "apply")
