Fail CI if go.mod changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
           keys:
             - v3-pkg-cache-{{ checksum "go.sum" }}
       - run:
+          command: go mod tidy && git diff --exit-code go.sum > /dev/null
+          working_directory: backend
+      - run:
           name: Test
           command: |
             make test
