--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
     environment:
       OKTETO_USER: cindylopez
     docker:
-      - image: okteto/dev:latest
+      - image: okteto/dev:go1.17
     steps:
       - checkout
       - restore_cache:
