--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,7 @@ repos:
       - id: check-vcs-permalinks
       - id: check-yaml
       - id: detect-private-key
-        exclude: ^pkg/k8s/secrets/certs\.go$|^pkg/syncthing/certs\.go$
+        exclude: ^pkg/k8s/secrets/certs\.go$|^pkg/syncthing/certs\.go$|^cmd/deploy/certs\.go$
       - id: end-of-file-fixer
       - id: fix-byte-order-marker
       - id: mixed-line-ending
